@@ -2,6 +2,7 @@ Upcoming:
 - Added dimensional shards to the forge:dusts tag
 - Fixed the machine infuser so that automation will put shards and machines in the right slots
 - Added dimensional shards to the new rftoolsbase:shards tag so that other mods can also add dimensional shards
+- Added the smart wrench to the forge:tools/wrench tag
 
 1.18-3.0.7:
 - Port to 1.18.2
